--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,21 @@
+builds: 
+  -
+    goos:
+      - linux
+      - darwin
+      - freebsd
+      - windows
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - 6
+      - 7
 archive:
   replacements:
     darwin: macOS
-    linux: Linux
-    windows: Windows
     386: i386
     amd64: x86_64
   wrap_in_directory: true
